tests-integration/fixtures/checking/1777489980_expression_hole/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
hole :: forall (t :: Type). (t :: Type)

Types

Diagnostics
error[TermHole]: Hole '?hole' has inferred type: (t :: Type)
  --> 3:8..3:13
  |
3 | hole = ?hole
  |        ^~~~~
